--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,104 +1,116 @@
-@define-color base00 #181818;
-@define-color base01 #2b2e37;
-@define-color base02 #3b3e47;
-@define-color base03 #585858;
-@define-color base04 #b8b8b8;
-@define-color base05 #d8d8d8;
-@define-color base06 #e8e8e8;
-@define-color base07 #f8f8f8;
-@define-color base08 #ab4642;
-@define-color base09 #dc9656;
-@define-color base0A #f7ca88;
-@define-color base0B #a1b56c;
-@define-color base0C #86c1b9;
-@define-color base0D #7cafc2;
-@define-color base0E #ba8baf;
-@define-color base0F #a16946;
-
 * {
-  transition: none;
-  box-shadow: none;
+    /* `otf-font-awesome` is required to be installed for icons */
+    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-size: 13px;
 }
 
-#waybar {
-	font-family: 'Source Code Pro', sans-serif;
-	font-size: 1.2em;
-	font-weight: 400;
-  color: @base04;
-  background: @base01;
+window#waybar {
+    background-color: rgba(43, 48, 59, 0.5);
+/*    border-bottom: 3px solid rgba(100, 114, 125, 0.5);*/
+    color: #ffffff;
+    transition-property: background-color;
+    transition-duration: .5s;
 }
 
-#workspaces {
-  margin: 0 4px;
+window#waybar.hidden {
+    opacity: 0.2;
+}
+
+window#waybar.termite {
+    background-color: #3F3F3F;
+}
+
+window#waybar.chromium {
+    background-color: #000000;
+    border: none;
+}
+
+button {
+    /* Use box-shadow instead of border so the text isn't offset */
+    box-shadow: inset 0 -3px transparent;
+    /* Avoid rounded borders under each button name */
+    border: none;
+    border-radius: 0;
+}
+
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+button:hover {
+    background: inherit;
+    box-shadow: inset 0 -3px #ffffff;
+}
+
+/* you can set a style on hover for any module like this */
+#pulseaudio:hover {
+    background-color: #a37800;
 }
 
 #workspaces button {
-  margin: 4px 0;
-  padding: 0 4px;
-  color: @base05;
+    padding: 0 5px;
+    background-color: transparent;
+    color: #ffffff;
 }
 
-#workspaces button.visible {
+#workspaces button:hover {
+    background: rgba(0, 0, 0, 0.2);
 }
 
+#workspaces button.focused,
 #workspaces button.active {
-  border-radius: 4px;
-  background-color: @base02;
+    background-color: #64727D;
+    box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button.urgent {
-  color: rgba(238, 46, 36, 1);
+    background-color: #eb4d4b;
 }
 
-#tray {
-  margin: 4px 4px 4px 4px;
-  border-radius: 4px;
-  background-color: @base02;
+#mode {
+    background-color: #64727D;
+    box-shadow: inset 0 -3px #ffffff;
 }
 
-#tray * {
-  padding: 0 6px;
-  border-left: 1px solid @base00;
+#clock,
+#battery,
+#cpu,
+#memory,
+#disk,
+#temperature,
+#backlight,
+#network,
+#pulseaudio,
+#wireplumber,
+#custom-media,
+#tray,
+#mode,
+#custom-notification,
+#custom-power,
+#mpd {
+    padding: 1px 5px;
+    color: #ffffff;
 }
 
-#tray *:first-child {
-  border-left: none;
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces {
+    margin-left: 0;
 }
 
-#mode, #battery, #cpu, #memory, #network, #pulseaudio, #idle_inhibitor, #backlight, #custom-storage, #custom-updates, #custom-weather, #custom-mail, #clock, #temperature, #language{
-  margin: 4px 2px;
-  padding: 0 6px;
-  background-color: @base02;
-  border-radius: 10px;
-  min-width: 20px;
+/* If workspaces is the rightmost module, omit right margin */
+.modules-right > widget:last-child > #workspaces {
+    margin-right: 0;
 }
 
-#pulseaudio.muted {
-  color: @base0F;
+@keyframes blink {
+    to {
+        background-color: #ffffff;
+        color: #000000;
+    }
 }
 
-#pulseaudio.bluetooth {
-  color: @base0C;
+label:focus {
+    background-color: #000000;
 }
 
-#clock {
-  margin-left: 0px;
-  margin-right: 4px;
-  background-color: transparent;
+#keyboard-state > label {
+    padding: 0 5px;
 }
 
-#temperature.critical {
-  color: @base0F;
-}
-
-#window {
-  font-size: 0.9em;
-	font-weight: 400;
-	font-family: sans-serif;
-}
-
-#language {
-	font-size: 0.9em;
-	font-weight: 500;
-	letter-spacing: -1px;
-}
